force-app/main/default/objects/FieloCH__ChallengeTag__c/FieloCH__ChallengeTag__c.object-meta.xml
<CustomObject>
    <label>Challenge Tag</label>
    <nameField>
        <displayFormat>CHT-{00000}</displayFormat>
        <label>Challenge Tag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Challenge Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>