force-app/main/default/objects/FieloCH__ChallengeTag__c/fields/FieloCH__Challenge__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Challenge__c</fullName>
    <label>Challenge</label>
    <referenceTo>FieloCH__Challenge__c</referenceTo>
    <relationshipLabel>Tags</relationshipLabel>
    <relationshipName>ChallengeTags</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>