force-app/main/default/objects/FieloCH__ChallengeTag__c/fields/FieloCH__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__ExpirationDate__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>