force-app/main/default/objects/FieloCH__ChallengeTag__c/fields/FieloCH__Tag__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Tag__c</fullName>
    <label>Tag</label>
    <referenceTo>FieloEE__Tag__c</referenceTo>
    <relationshipLabel>Challenge Tags</relationshipLabel>
    <relationshipName>ChallengeTags</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>